--- a/src/docs/asciidoc/todo/todo.adoc
+++ b/src/docs/asciidoc/todo/todo.adoc
@@ -8,16 +8,18 @@ endif::masterdoc[]
 
 = Lisez !
 * Des livres
-* Des blogs (https://dzone.com/[DZone], https://www.infoq.com/[InfoQ], https://blog.jetbrains.com/idea/tag/java-annotated/[Java Annotated Monthly]), wiki (http://wiki.c2.com/[C2 wiki]), flux, ...
+* Des blogs (https://dzone.com/[DZone], https://www.infoq.com/[InfoQ]), wiki (http://wiki.c2.com/[C2 wiki]), flux, ...
 * Des questions/réponses (https://stackoverflow.com/[Stack Overflow])
 * *Du code* (http://wiki.c2.com/?TipsForReadingCode[Tips For Reading Code], https://github.com/explore[github], http://wiki.c2.com/?ProgramsToRead[Programs To Read])
 
-CAUTION: pour les langages, attention aux versions (Java >= 8)
+CAUTION: pour les langages, attention aux versions (Java >= 17)
 
 IMPORTANT: Ayez l'esprit critique (toutes les pages ne se valent pas)
 
-//TODO Veille
-// DEVOXX
+= Faites de la veille
+* Blogs d'actualités (https://blogs.oracle.com/javamagazine/[Java Magazine], https://blog.jetbrains.com/idea/tag/java-annotated/[Java Annotated Monthly])
+* Conférences (https://www.youtube.com/@DevoxxForever[DEVOXX], https://www.youtube.com/@DevoxxFRvideos[DEVOXX FR])
+* Chaînes YouTube (https://www.youtube.com/@java[Java])
 
 = Pratiquez !
 * http://codekata.com/[Kata], Koans, https://fr.wikipedia.org/wiki/Coding_dojo[Coding Dojo]
