--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -23,4 +23,7 @@ include::practice/practice.adoc[]
 
 include::todo/todo.adoc[]
 
+//TODO
+// https://dzone.com/articles/singleton-six-ways-to-write-and-uses-in-Java[Singleton: 6 Ways To Write and Use in Java Programming]
+
 :leveloffset: -1
