Ajoute la section sur le pattern matching

--- a/src/docs/asciidoc/attributes.adoc
+++ b/src/docs/asciidoc/attributes.adoc
@@ -1,6 +1,8 @@
 :stem:
 :icons: font
 :imagesdir: figs
+:srcdir: ../../../main/java/fr/uvsq/pglp
+:tstdir: ../../../test/java/fr/uvsq/pglp
 :source-highlighter: highlightjs
 :revealjsdir: reveal.js
 :revealjs_theme: beige
